@@ -7,5 +7,7 @@ tox==3.15.0
 pylint==1.9.5
 # for integration and platform tests
 awscli==1.18.51
-https://github.com/cloudify-cosmo/cloudify-common/archive/master.zip
-https://github.com/cloudify-incubator/cloudify-ecosystem-test/archive/2.1.2.zip
+git+https://github.com/cloudify-cosmo/cloudify-common@master#egg=cloudify-common[dispatcher]==master
+git+https://github.com/cloudify-cosmo/cloudify-cli@master#egg=cloudify-cli==master
+pytest==4.6.3
+pyyaml==3.12
