@@ -78,3 +78,4 @@
     - Update AZ regex.
 2.3.5:
     - Update wagon builder to py2py3 wagon.
+    - Add 5.1.0 integration tests.
